# linkup

./: .dockerignore  .gitignore  Dockerfile  README.md  pyproject.toml  requirements.txt  startup.sh
.github/workflows/: master_linkup-web.yml
app/: config.py  database.py  database_setup.py  main.py
app/models/: medias.py  posts.py  users.py
app/routes/: posts.py  users.py
app/services/: storage.py
docs/: api-design.md  azure-deployment.md  database.md
