[project]
name = "linkup"
version = "0.1.0"
description = "A headless social platform"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "azure-storage-blob>=12.24.0",
    "fastapi[standard]>=0.115.5",
    "psycopg2-binary>=2.9.10",
    "pydantic-settings>=2.6.1",
    "sqlmodel>=0.0.22",
]
